Avoid wrapping in last reviewed column

--- a/schemes/views/assets/application.scss
+++ b/schemes/views/assets/application.scss
@@ -15,3 +15,7 @@
 .app-vertical-align-middle {
   vertical-align: middle;
 }
+
+.app-white-space-nowrap {
+  white-space: nowrap;
+}
